--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# VS code stuff
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+# MacOS
+*.DS_Store
+
 # Prerequisites
 *.d
 
